feat: Introduce a comprehensive Applicant Tracking System (ATS) with AI analysis, history management, and configurable settings.

--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.80",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
     "decap-cms-app": "^3.10.0",
     "framer-motion": "^12.34.0",
     "gray-matter": "^4.0.3",
+    "jspdf": "^4.1.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "decap-server": "^3.5.0",
