--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^4.1.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "16.1.6",
+    "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remark": "^15.0.1",
